# sid

./: Cargo.toml  DESIGN.md  NOTES.md  PAIN_POINTS.md  README.md  SPECULATIONS.md  TODO.md  alt-reverse-polish-syntax.md  design-discussion.md  flake.nix  functions.md  imperative-syntax.sid  new-types.md  notes.md  reverse-polish-syntax.md  reverse-polish-syntax.rb  runtime.md  scope.md  structured.sid  syntax-sketch  test.sh  test.sid  todo.md  types.md
docs/: README.md  execution.md  syntax.md  types.md
docs/built-ins/: README.md  assert.md  c_link_lib.md  c_load_header.md  clone.md  debug_stack.md  do_while.md  drop.md  eq.md  fn.md  load_scope.md  not.md  null.md  ptr_cast.md  ptr_read_cstr.md  typed_args.md  typed_rets.md  untyped_args.md  untyped_rets.md  while_do.md
docs/tricks/: CLONE.md  DEFERRED.md  DROP.md  README.md  REORDERING.md  TYPED-FUNCTIONS.md
examples/: example.sid  fizz-buzz.rust  fizz-buzz.sid  nurbs.sid  reordering.sid  structs.sid
src/: comptime.rs  lib.rs  llvm_backend.rs  to_syntax.rs  types.rs
src/built_in/: control_flow.rs  ffi.rs  mod.rs  scope.rs  stack.rs  type_ops.rs
src/c_ffi/: call.rs  mod.rs  parse.rs  types.rs
src/invoke/: builtin_function.rs  mod.rs
src/parse/: mod.rs  parse_char.rs  parse_label.rs  parse_number.rs  parse_string.rs  parse_template.rs
src/render/: mod.rs
tests/: builtin_label_resolution.rs  c_ffi.rs  comptime_invoke.rs  comptime_label.rs  comptime_render.rs  do_while.rs  fn_type.rs  invokation.rs  label_resolution.rs  map_expr.rs  match_builtin.rs  parse.rs  render.rs  scope.rs  scope_builtins.rs  stack_reorder.rs  type_combinators.rs  value_literals.rs  while_do.rs
zig/: README.md  build.zig
(+23 files in other folders)
