[package]
name = "sid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
unicode-segmentation = "1.11.0"

eframe = { version = "0.27.2", optional = true }
egui = { version = "0.27.2", optional = true }
egui_file = { version = "0.17.0", optional = true }

[[bin]]
name = "sid"

[[bin]]
name = "gui"
required-features = ["eframe", "egui", "egui_file"]
