[package]
name = "sid"
version = "0.1.0"
edition = "2021"

[features]
llvm = ["inkwell"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
unicode-segmentation = "1.11.0"
anyhow = "1"

eframe = { version = "0.27.2", optional = true }
egui = { version = "0.27.2", optional = true }
egui_file = { version = "0.17.0", optional = true }
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

[[bin]]
name = "sid"

[[bin]]
name = "gui"
required-features = ["eframe", "egui", "egui_file"]

[[bin]]
name = "sid-llvm"
path = "src/bin/sid_llvm.rs"
required-features = ["llvm"]

[profile.release]
lto = "thin"
codegen-units = 1
